# challenge_CSC_52081_EP

./: README.md  double_dqn_agent.py  explore_trajectories.ipynb  heuristic_agent.py  main.py  pyproject.toml
example/: single_trajectory.ipynb
slides/: INF581 - Optimization.html
student_client/: leaderboard.py
